Update Changelog for Galician

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -2,6 +2,10 @@
 
 	* fr.po: Updated to 742t. Proofreading still pending
 
+2006-05-03  Jacobo Tarrio  <jtarrio@debian.org>
+
+	* gl.po: Updated to 742t.
+
 2006-05-03  Guillem Jover  <guillem@debian.org>
 
 	* dpkg.pot: Regenerated.
