Support binNMU safe packages even when source and binary differ in version.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2006-05-04  Guillem Jover  <guillem@debian.org>
+
+	* scripts/dpkg-gencontrol.pl: Use the source:Version substvar when
+	setting the Source field version, in case the binary package
+	has a different one from the source package.
+
 2006-05-02  Guillem Jover  <guillem@debian.org>
 
 	* utils/start-stop-daemon.c (do_help): Standarize output format.
