--- a/debian/changelog
+++ b/debian/changelog
@@ -36,6 +36,8 @@ dpkg (1.13.19~) UNRELEASED; urgency=low
   * Add new substvars source:Version, source:Upstream-Version and
     binary:Version so packages will be able to avoid breaking on binNMUs.
     Based on a patch by Ken Bloom and Jeroen van Wolffelaar. Closes: #358530
+  * Support binNMU safe packages even when source and binary differ in
+    version.
   * Rename dpkg:UpstreamVersion to dpkg:Upstream-Version. Make dpkg:Version
     and dpkg:Upstream-Version get the current dpkg versions instead of the
     ones from the package being built.
