Make install-info '--dir-file' option compatible with GNU install-info by renaming the infodir variable to dirfile and not appending the '/dir' string except when initializing from '--info-dir' or '--infodir' (Wayne Davison). Closes: #61640, #67237, #286275

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+2006-05-04  Wayne Davison <wayned@users.sourceforge.net>,
+            Guillem Jover  <guillem@debian.org>
+
+	* scripts/install-info.pl: Make '--dir-file' option compatible
+	with GNU install-info by renaming the infodir variable to dirfile
+	and not appending the '/dir' string except when initializing from
+	'--info-dir' or '--infodir'.
+
 2006-05-04  Guillem Jover  <guillem@debian.org>
 
 	* scripts/dpkg-gencontrol.pl: Use the source:Version substvar when
