--- a/debian/changelog
+++ b/debian/changelog
@@ -42,6 +42,10 @@ dpkg (1.13.19~) UNRELEASED; urgency=low
   * Split usage strings to make it easier for translators when those change.
     Closes: #323957
   * Standarize start-stop-daemon usage output format.
+  * Make install-info '--dir-file' option compatible with GNU install-info
+    by renaming the infodir variable to dirfile and not appending the
+    '/dir' string except when initializing from '--info-dir' or
+    '--infodir' (Wayne Davison). Closes: #61640, #67237, #286275
 
  -- Jacobo Tarrio <jtarrio@debian.org>  Wed,  3 May 2006 11:50:59 +0200
 
