--- a/debian/changelog
+++ b/debian/changelog
@@ -46,6 +46,9 @@ dpkg (1.13.19~) UNRELEASED; urgency=low
     by renaming the infodir variable to dirfile and not appending the
     '/dir' string except when initializing from '--info-dir' or
     '--infodir' (Wayne Davison). Closes: #61640, #67237, #286275
+  * Make install-info add a new line after adding the last entry at the
+    end of the dir file, which makes the info readers able to see those
+    last enties (Nicolas François). Closes: #164495
 
  -- Jacobo Tarrio <jtarrio@debian.org>  Wed,  3 May 2006 11:50:59 +0200
 
