Use the numerical value of errno instead of a string in install-info when checking if the locking error was due to an already existing file, which is locale dependent, and die accordingly. Based on a patch by Nicolas FranÃ§ois. Closes: #199204, #210781

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2006-05-04  Nicolas François  <nicolas.francois@centraliens.net>,
+	    Guillem Jover  <guillem@debian.org>
+
+	* scripts/install-info.pl: Use the numerical value of $! instead of
+	the string when checking if the locking error was due to an already
+	existing file, which is locale dependent, and die accordingly.
+
 2006-05-04  Nicolas François  <nicolas.francois@centraliens.net>
 
 	* scripts/install-info.pl: Add a new line after adding the last
