--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2006-05-04  Guillem Jover  <guillem@debian.org>
+
+	* scripts/dpkg-genchanges.pl: Do not use $version to refer to the
+	source package version, as it denotes the dpkg version.
+
 2006-05-04  Nicolas François  <nicolas.francois@centraliens.net>,
 	    Guillem Jover  <guillem@debian.org>
 
