French translaion 1st review

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2006-05-04  Christian Perrier  <bubulle@debian.org>
+
+	* fr.po: First review received
+
 2006-05-03  Christian Perrier  <bubulle@debian.org>
 
 	* fr.po: Updated to 742t. Proofreading still pending
