--- a/po/fr.po
+++ b/po/fr.po
@@ -966,7 +966,7 @@ msgstr " %s de valeur nulle"
 
 #: lib/showcright.c:34
 msgid "cannot open GPL file"
-msgstr "impossible d'ouvrir le fichier GPL "
+msgstr "impossible d'ouvrir le fichier GPL"
 
 #: lib/showpkg.c:70
 #, c-format
@@ -2403,9 +2403,9 @@ msgid ""
 "  --license|--licence              Show the copyright licensing terms.\n"
 "\n"
 msgstr ""
-"  -h|--help                         Affiche ce message.\n"
-"  --version                         Affiche la version.\n"
-"  --license | --licence             Affiche la licence.\n"
+"  -h|--help                         Afficher ce message.\n"
+"  --version                         Afficher la version.\n"
+"  --license | --licence             Afficher la licence.\n"
 "\n"
 
 #: src/main.c:94
@@ -2462,18 +2462,18 @@ msgid ""
 "\n"
 msgstr ""
 "Options :\n"
-"  --admindir=<rép.>           Utilise le répertoire <rép.> au lieu de %s\n"
-"  --root=<rép.>               Installe sur un système alternatif dont la\n"
+"  --admindir=<rép.>           Utiliser le répertoire <rép.> au lieu de %s\n"
+"  --root=<rép.>               Installer sur un système alternatif dont la\n"
 "                                 racine est située à un autre endroit\n"
-"  --instdir=<rép.>           Change la racine d'installation sans changer\n"
+"  --instdir=<rép.>           Changer la racine d'installation sans changer\n"
 "                                 le répertoire d'administration\n"
-"  -O|--selected-only         Ignore les paquets non sélectionnées pour être\n"
+"  -O|--selected-only         Ignorer les paquets non sélectionnées pour être\n"
 "                                 installés/mis à niveau\n"
-"  -E|--skip-same-version     Ignore les paquets dont la version est la même\n"
+"  -E|--skip-same-version     Ignorer les paquets dont la version est la même\n"
 "                                 que celle installée\n"
-"  -G|--refuse-downgrade      Ignore les paquets dont la version est moins\n"
+"  -G|--refuse-downgrade      Ignorer les paquets dont la version est moins\n"
 "                                 récente que celle installée\n"
-"  -B|--auto-deconfigure      Installe même si cela entraîne la rupture\n"
+"  -B|--auto-deconfigure      Installer même si cela entraîne la rupture\n"
 "                                 d'autres paquets\n"
 "  --no-debsig                Ne pas tenter d'authentifier les signatures\n"
 "                                 des paquets\n"
@@ -3241,8 +3241,8 @@ msgid ""
 "\n"
 msgstr ""
 "Options :\n"
-"  --admindir=<répertoire>   Utilise <répertoire> à la place de %s\n"
-"  --showformat=<format>     Utilise un formatage alternatif pour --show\n"
+"  --admindir=<répertoire>   Utiliser <répertoire> à la place de %s\n"
+"  --showformat=<format>     Utiliser un formatage alternatif pour --show\n"
 "\n"
 
 #: src/query.c:504 dpkg-deb/main.c:97
@@ -3821,7 +3821,7 @@ msgid ""
 " size %ld bytes: control archive= %zi bytes.\n"
 msgstr ""
 " nouveau paquet Debian, version %s.\n"
-" taille %ld octets : archive de contrôle= %zi octets.\n"
+" taille %ld octets : archive de contrôle = %zi octets.\n"
 
 #: dpkg-deb/extract.c:195
 msgid "control information length"
@@ -3874,7 +3874,7 @@ msgstr "échec de modification de la position courante dans le fichier"
 #: dpkg-deb/extract.c:242
 msgid "failed to open pipe descriptor `1' in paste"
 msgstr ""
-"échec d'ouverture de descripteur de tuyau (« pipe ») « 1 » lors du collage"
+"échec d'ouverture de descripteur de tube (« pipe ») « 1 » lors du collage"
 
 #: dpkg-deb/extract.c:244
 msgid "failed to write to gzip -dc"
@@ -4064,18 +4064,18 @@ msgid ""
 "\n"
 msgstr ""
 " Commandes :\n"
-"   -b|--build <répertoire> [<deb>]   Construit une archive.\n"
-"   -c|--contents <deb>               Liste le contenu.\n"
-"   -I|--info <deb> [<cfile>...]      Affiche les informations sur\n"
+"   -b|--build <répertoire> [<deb>]   Construire une archive.\n"
+"   -c|--contents <deb>               Lister le contenu.\n"
+"   -I|--info <deb> [<cfile>...]      Afficher les informations sur\n"
 "                                     la sortie standard.\n"
-"   -W|--show <deb>                   Montre des informations sur\n"
+"   -W|--show <deb>                   Montrer des informations sur\n"
 "                                     le paquet.\n"
-"   -f|--field <deb> [<cfield>...]    Affiche le(s) champ(s) sur la\n"
+"   -f|--field <deb> [<cfield>...]    Afficher le(s) champ(s) sur la\n"
 "                                     sortie standard.\n"
-"   -e|--control <deb> [<répertoire>] Extrait l'information de contrôle.\n"
-"   -x|--extract <deb> <répertoire>   Extrait les fichiers.\n"
-"   -X|--vextract <deb> <répertoire>  Extrait et liste les fichiers.\n"
-"   --fsys-tarfile <deb>              Restitue le système de fichiers\n"
+"   -e|--control <deb> [<répertoire>] Extraire l'information de contrôle.\n"
+"   -x|--extract <deb> <répertoire>   Extraire les fichiers.\n"
+"   -X|--vextract <deb> <répertoire>  Extraire et lister les fichiers.\n"
+"   --fsys-tarfile <deb>              Restituer le système de fichiers\n"
 "                                     de l'archive tar.\n"
 
 #: dpkg-deb/main.c:79
@@ -4107,13 +4107,13 @@ msgid ""
 "\n"
 msgstr ""
 "Options :\n"
-"  --showformat=<format>  Utilise un formatage alternatif pour --show.\n"
-"  -D                     Active la sortie de débogage.\n"
-"  --old|--new            Contrôle le format d'archive .\n"
-"  --no-check             Supprime la vérification du fichier control\n"
+"  --showformat=<format>  Utiliser un formatage alternatif pour --show.\n"
+"  -D                     Activer la sortie de débogage.\n"
+"  --old|--new            Contrôler le format d'archive .\n"
+"  --no-check             Supprimer la vérification du fichier control\n"
 "                         (construit des paquets abîmés).\n"
-"  -z#                    Utilise la compression lors de la construction.\n"
-"  -Z<type>               Indique le type de compression utilisée\n"
+"  -z#                    Utiliser la compression lors de la construction.\n"
+"  -Z<type>               Indiquer le type de compression utilisée\n"
 "                         pour la construction\n"
 "                         valeurs possibles : gzip, bzip2, none\n"
 "\n"
@@ -4348,13 +4348,13 @@ msgid ""
 "\n"
 msgstr ""
 "Commandes :\n"
-"       -s|--split <fichier> [<préfixe>]   Découpe une archive.\n"
-"       -j|--join <partie> <partie> ...    Fusionne les parties.\n"
-"       -I|--info <partie> ...             Affiche l'information sur une "
+"       -s|--split <fichier> [<préfixe>]   Découper une archive.\n"
+"       -j|--join <partie> <partie> ...    Fusionner les parties.\n"
+"       -I|--info <partie> ...             Afficher l'information sur une "
 "partie.\n"
-"       -a|--auto -o <complet> <partie>    Auto-assemble les parties.\n"
-"       -l|--listq                         Liste les pièces isolées.\n"
-"       -d|--discard [<nom fichier> ...]   Annule les pièces isolées.\n"
+"       -a|--auto -o <complet> <partie>    Auto-assembler les parties.\n"
+"       -l|--listq                         Lister les pièces isolées.\n"
+"       -d|--discard [<nom fichier> ...]   Annuler les pièces isolées.\n"
 "\n"
 
 #: dpkg-split/main.c:69
@@ -4372,11 +4372,11 @@ msgid ""
 msgstr ""
 "Options :\n"
 "   --depotdir <répertoire>  (par défaut %s %s)\n"
-"   -S|--partsize <taille>   (en ko, pour -s, par défaut 450)\n"
+"   -S|--partsize <taille>   (pour -s, par défaut 450 ko)\n"
 "   -o|--output <fichier>    (pour -j, par défaut <paquet>-<version>.deb)\n"
 "   -Q|--npquiet             (ne rien afficher quand -a n'est pas une "
 "partie)\n"
-"   --msdos                  (génère des noms de fichiers au format 8.3)\n"
+"   --msdos                  (générer des noms de fichiers au format 8.3)\n"
 "\n"
 "Code de sortie : 0 = OK ;  1 = -a n'est pas une partie ;  2 = problème !\n"
 
