Completed French dselect translation. Nobody with good mental condition uses dselect now but I can't stand not being 100%

--- a/dselect/po/fr.po
+++ b/dselect/po/fr.po
@@ -1,4 +1,4 @@
-# translation of fr.po to French
+# translation of fr2.po to French
 # Dpkg --- the Debian GNU/Linux package maintenance system.
 #
 # Copyright (C) 1994,1995,1996 Ian Jackson <ian@chiark.greenend.org.uk>
@@ -17,7 +17,6 @@
 # Copyright (C) 2000 JÃƒÂ©rÃƒÂ´me Marant <jerome.marant@free.fr>
 # Copyright (C) 2000, 2001, 2002 Martin Quinson <Martin.Quinson@tuxfamily.org>
 #
-# Christian Perrier <bubulle@debian.org>, 2005, 2006.
 #
 # #######################################"
 # Notes de traduction
@@ -58,12 +57,13 @@
 # abréviation postint...
 # to fsync (synchroniser?)
 #
+# Christian Perrier <bubulle@debian.org>, 2005, 2006.
 msgid ""
 msgstr ""
-"Project-Id-Version: fr\n"
+"Project-Id-Version: fr2\n"
 "Report-Msgid-Bugs-To: debian-dpkg@lists.debian.org\n"
 "POT-Creation-Date: 2006-05-03 11:56+0300\n"
-"PO-Revision-Date: 2006-02-17 08:56+0200\n"
+"PO-Revision-Date: 2006-05-04 07:15+0200\n"
 "Last-Translator: Christian Perrier <bubulle@debian.org>\n"
 "Language-Team: French <debian-l10n-french@lists.debian.org>\n"
 "MIME-Version: 1.0\n"
@@ -673,8 +673,7 @@ msgstr ""
 
 #: dselect/helpmsgs.cc:125
 msgid "Display, part 2: list highlight; information display"
-msgstr ""
-"Affichage, 2e partie : surlignage de la liste ; affichage d'informations"
+msgstr "Affichage, 2e partie : surlignage de la liste ; affichage d'informations"
 
 #: dselect/helpmsgs.cc:125
 msgid ""
@@ -952,9 +951,11 @@ msgid ""
 "Usage: %s [<option> ...] [<action> ...]\n"
 "\n"
 msgstr ""
+"Syntaxe : %s [<option> ...] [<action> ...]\n"
+"\n"
 
 #: dselect/main.cc:175
-#, fuzzy, c-format
+#, c-format
 msgid ""
 "Options:\n"
 "  --admindir <directory>     Use <directory> instead of %s.\n"
@@ -964,8 +965,6 @@ msgid ""
 "                             Configure screen colours.\n"
 "\n"
 msgstr ""
-"Syntaxe: %s [<option> ...] [<action> ...]\n"
-"\n"
 "Options:\n"
 "  --admindir <répertoire>    Utiliser <répertoire> au lieu de %s ;\n"
 "  --expert                   Activer le mode expert ;\n"
@@ -975,12 +974,6 @@ msgstr ""
 "  --colour | --color screenpart:[avant_plan],[arrière_plan][:attr[+attr"
 "+..]]\n"
 "                             Configurer les couleurs d'affichage ;\n"
-"  --help                     Afficher ce message d'aide ;\n"
-"  --version                  Afficher la version ;\n"
-"  --license                  Afficher la licence.\n"
-"\n"
-"Actions:\n"
-"  access update select install config remove quit\n"
 "\n"
 
 #: dselect/main.cc:184
@@ -991,6 +984,10 @@ msgid ""
 "  --license | --licence      Show the license.\n"
 "\n"
 msgstr ""
+"  --help                     Afficher ce message d'aide ;\n"
+"  --version                  Afficher la version ;\n"
+"  --license                  Afficher la licence.\n"
+"\n"
 
 #: dselect/main.cc:190
 #, c-format
@@ -999,6 +996,9 @@ msgid ""
 "  access update select install config remove quit\n"
 "\n"
 msgstr ""
+"Actions:\n"
+"  access update select install config remove quit\n"
+"\n"
 
 #: dselect/main.cc:194
 #, c-format
@@ -1241,8 +1241,7 @@ msgstr "script de requête/configuration"
 #: dselect/methparse.cc:53
 #, c-format
 msgid "syntax error in method options file `%.250s' -- %s"
-msgstr ""
-"erreur de syntaxe dans le fichier des options de méthode « %.250s » -- %s"
+msgstr "erreur de syntaxe dans le fichier des options de méthode « %.250s » -- %s"
 
 #: dselect/methparse.cc:58
 #, c-format
@@ -1252,8 +1251,7 @@ msgstr "erreur de lecture sur le fichier des options « %.250s »"
 #: dselect/methparse.cc:86
 #, c-format
 msgid "unable to read `%.250s' directory for reading methods"
-msgstr ""
-"impossible de lire le répertoire « %.250s » pour récupérer les méthodes"
+msgstr "impossible de lire le répertoire « %.250s » pour récupérer les méthodes"
 
 #: dselect/methparse.cc:100
 #, c-format
@@ -1272,8 +1270,7 @@ msgstr "impossible de lire le fichier des options de méthode « %.250s »"
 
 #: dselect/methparse.cc:140
 msgid "non-digit where digit wanted"
-msgstr ""
-"caractère non numérique rencontré alors qu'un caractère numérique est attendu"
+msgstr "caractère non numérique rencontré alors qu'un caractère numérique est attendu"
 
 #: dselect/methparse.cc:143
 msgid "EOF in index string"
@@ -1325,8 +1322,7 @@ msgstr "impossible d'ouvrir le fichier de description d'option « %.250s »"
 #: dselect/methparse.cc:187
 #, c-format
 msgid "unable to stat option description file `%.250s'"
-msgstr ""
-"impossible d'analyser le nouveau fichier de description d'option « %.250s »"
+msgstr "impossible d'analyser le nouveau fichier de description d'option « %.250s »"
 
 #: dselect/methparse.cc:191
 #, c-format
@@ -1826,3 +1822,4 @@ msgstr "Vers. inst"
 #: dselect/pkgtop.cc:295
 msgid "Avail.ver"
 msgstr "Vers. dispo."
+
