--- a/debian/changelog
+++ b/debian/changelog
@@ -23,6 +23,7 @@ dpkg (1.13.19~) UNRELEASED; urgency=low
   [ Updated dselect Translations ]
   * Romanian (Eddy Petrişor)
   * Galician (Jacobo Tarrio)
+  * French (Christian Perrier).
 
   [ Nicolas Francois ]
   * Generate the Russian man pages in the KOI8-R charset. Closes: #361987
