--- a/dselect/po/ChangeLog
+++ b/dselect/po/ChangeLog
@@ -1,3 +1,7 @@
+2006-05-04  Christian Perrier  <bubulle@debian.org>
+
+	* fr.po: Updated to 289t.
+
 2006-05-03  Jacobo Tarrio  <jtarrio@debian.org>
 
 	* gl.po: Updated to 289t.
