Updated dutch translation

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2006-05-04  Bart Cornelis <cobaco@linux.be>
+
+	* nl.po: Updated translation
+
 2006-05-04  Christian Perrier  <bubulle@debian.org>
 
 	* fr.po: First review received
