--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,14 +1,14 @@
-2006-05-04  Bart Cornelis <cobaco@linux.be>
+2006-05-04  Bart Cornelis  <cobaco@linux.be>
 
-	* nl.po: Updated translation
+	* nl.po: Updated translation.
 
 2006-05-04  Christian Perrier  <bubulle@debian.org>
 
-	* fr.po: First review received
+	* fr.po: First review received.
 
 2006-05-03  Christian Perrier  <bubulle@debian.org>
 
-	* fr.po: Updated to 742t. Proofreading still pending
+	* fr.po: Updated to 742t. Proofreading still pending.
 
 2006-05-03  Jacobo Tarrio  <jtarrio@debian.org>
 
