Escape hyphens in man pages.

--- a/debian/changelog
+++ b/debian/changelog
@@ -55,6 +55,7 @@ dpkg (1.13.19~) UNRELEASED; urgency=low
     when checking if the locking error was due to an already existing
     file, which is locale dependent, and die accordingly. Based on a patch
     by Nicolas François. Closes: #199204, #210781
+  * Escape hyphens in man pages.
 
  -- Bart Cornelis (cobaco) <cobaco@linux.be>  Thu,  4 May 2006 10:36:12 +0200
 
