--- a/debian/changelog
+++ b/debian/changelog
@@ -56,6 +56,8 @@ dpkg (1.13.19~) UNRELEASED; urgency=low
     file, which is locale dependent, and die accordingly. Based on a patch
     by Nicolas François. Closes: #199204, #210781
   * Escape hyphens in man pages.
+  * Bump Standards-Version to 3.7.1.
+  * Wrapped debian/control fields except Uploaders given current policy.
 
  -- Bart Cornelis (cobaco) <cobaco@linux.be>  Thu,  4 May 2006 10:36:12 +0200
 
