--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-dpkg (1.13.19~) UNRELEASED; urgency=low
+dpkg (1.13.19) unstable; urgency=low
 
   [ Frank Lichtenheld ]
   * Add -follow (back) to find call in dpkg-scanpackages.
@@ -59,7 +59,7 @@ dpkg (1.13.19~) UNRELEASED; urgency=low
   * Bump Standards-Version to 3.7.1.
   * Wrapped debian/control fields except Uploaders given current policy.
 
- -- Bart Cornelis (cobaco) <cobaco@linux.be>  Thu,  4 May 2006 10:36:12 +0200
+ -- Guillem Jover <guillem@debian.org>  Thu,  4 May 2006 14:05:21 +0300
 
 dpkg (1.13.18) unstable; urgency=low
 
