--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,8 @@
+dpkg (1.13.20~) UNRELEASED; urgency=low
+
+
+ -- Guillem Jover <guillem@debian.org>  Thu,  4 May 2006 14:33:33 +0300
+
 dpkg (1.13.19) unstable; urgency=low
 
   [ Frank Lichtenheld ]
