--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,9 @@
 2006-05-04  Guillem Jover  <guillem@debian.org>
 
+	* configure.ac: Bump version to 1.13.20~.
+
+2006-05-04  Guillem Jover  <guillem@debian.org>
+
 	* configure.ac: Release 1.13.19.
 
 2006-05-04  Guillem Jover  <guillem@debian.org>
