Update Polish translations (BTW. somebody needs to do `make -C man updatepo')

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,5 +1,13 @@
 dpkg (1.13.20~) UNRELEASED; urgency=low
 
+  [ Updated dpkg Translations ]
+  * Polish (Robert Luberda).
+
+  [ Updated dselect Translations ]
+  * Polish (Robert Luberda).
+
+  [ Updated man pages translations ]
+  * Polish (Robert Luberda).
 
  -- Guillem Jover <guillem@debian.org>  Thu,  4 May 2006 14:33:33 +0300
 
