--- a/dselect/po/pl.po
+++ b/dselect/po/pl.po
@@ -3,18 +3,17 @@
 # Piotr Roszatycki <dexter@debian.org>, 1999.
 # Bartosz Feñski <fenio@debian.org>, 2004-2005
 msgid ""
-msgstr ""
-"Project-Id-Version: dpkg 1.13.17\n"
+msgstr "Project-Id-Version: dpkg 1.13.19\n"
 "Report-Msgid-Bugs-To: debian-dpkg@lists.debian.org\n"
 "POT-Creation-Date: 2006-05-03 11:56+0300\n"
-"PO-Revision-Date: 2006-03-24 20:04+0100\n"
+"PO-Revision-Date: 2006-05-04 22:15+0200\n"
 "Last-Translator: Robert Luberda <robert@debian.org>\n"
 "Language-Team: Polish <pddp@debian.linux.org.pl>\n"
-"MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=ISO-8859-2\n"
+"Plural-Forms: nplurals=3; plural=n==1 ? 0 : n%10>=2 && n%10<=4 && (n%100<10 ||"
+" n%100>=20) ? 1 : 2;\n"
+"MIME-Version: 1.0\n"
 "Content-Transfer-Encoding: 8-bit\n"
-"Plural-Forms: nplurals=3; plural=n==1 ? 0 : n%10>=2 && n%10<=4 && (n%100<10 "
-"|| n%100>=20) ? 1 : 2;\n"
 
 #: dselect/basecmds.cc:121
 msgid "Search for ? "
@@ -22,7 +21,7 @@ msgstr "Szukaj ? "
 
 #: dselect/basecmds.cc:143
 msgid "Error: "
-msgstr "B³±d:"
+msgstr "B³±d: "
 
 #: dselect/basecmds.cc:171
 msgid "Help: "
@@ -872,10 +871,11 @@ msgstr ""
 msgid ""
 "Usage: %s [<option> ...] [<action> ...]\n"
 "\n"
-msgstr ""
+msgstr "U¿ycie: %s [<opcja> ...] [<akcja> ...]\n"
+"\n"
 
 #: dselect/main.cc:175
-#, fuzzy, c-format
+#, c-format
 msgid ""
 "Options:\n"
 "  --admindir <directory>     Use <directory> instead of %s.\n"
@@ -885,20 +885,12 @@ msgid ""
 "                             Configure screen colours.\n"
 "\n"
 msgstr ""
-"U¿ycie: %s [<opcja> ...] [<akcja> ...]\n"
-"\n"
-"Options:\n"
+"Opcje:\n"
 "  --admindir <katalog>       U¿ywa <katalogu> zamiast %s.\n"
 "  --expert                   W³±cza tryb eksperta.\n"
 "  --debug <plik> | -D<plik>  W³±cza debugowanie, wysy³a wyj¶cie do <pliku>.\n"
 "  --colour | --color czê¶æ_widoku:[kolor_tekstu],[kolor_t³a][:atr[+atr+..]]\n"
 "                             Konfiguruje kolory ekranu.\n"
-"  --help                     Wy¶wietla ten komunikat pomocy.\n"
-"  --version                  Wy¶wietla informacje o wersji.\n"
-"  --license                  Wy¶wietla informacje o licencji.\n"
-"\n"
-"Akcje:\n"
-"  access update select install config remove quit\n"
 "\n"
 
 #: dselect/main.cc:184
@@ -908,7 +900,10 @@ msgid ""
 "  --version                  Show the version.\n"
 "  --license | --licence      Show the license.\n"
 "\n"
-msgstr ""
+msgstr "  --help                     Wy¶wietla ten komunikat pomocy.\n"
+"  --version                  Wy¶wietla informacje o wersji.\n"
+"  --license                  Wy¶wietla informacje o licencji.\n"
+"\n"
 
 #: dselect/main.cc:190
 #, c-format
@@ -916,7 +911,9 @@ msgid ""
 "Actions:\n"
 "  access update select install config remove quit\n"
 "\n"
-msgstr ""
+msgstr "Akcje:\n"
+"  access update select install config remove quit\n"
+"\n"
 
 #: dselect/main.cc:194
 #, c-format
@@ -1730,3 +1727,4 @@ msgstr "Zainst."
 #: dselect/pkgtop.cc:295
 msgid "Avail.ver"
 msgstr "Dostêpne"
+
