--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2006-05-04  Robert Luberda <robert@debian.org>
+
+	* pl.po: Updated to 742t.
+	
 2006-05-04  Bart Cornelis  <cobaco@linux.be>
 
 	* nl.po: Updated translation.
