--- a/man/pl/dpkg-statoverride.8.pl.po
+++ b/man/pl/dpkg-statoverride.8.pl.po
@@ -2,15 +2,16 @@
 # This file is distributed under the same license as the dpkg package.
 #
 msgid ""
-msgstr "Project-Id-Version: dpkg 1.13.16\n"
-"POT-Creation-Date: 2006-02-28  1:40+0200\n"
-"PO-Revision-Date: 2006-03-02 00:02+0100\n"
+msgstr ""
+"Project-Id-Version: dpkg 1.13.19\n"
+"POT-Creation-Date: 2006-05-04 23:32+0200\n"
+"PO-Revision-Date: 2006-05-04 22:09+0200\n"
 "Last-Translator: Robert Luberda <robert@debian.org>\n"
 "Language-Team: Polish <debian-l10n-polish@lists.debian.org>\n"
-"Content-Type: text/plain; charset=ISO-8859-2\n"
-"Plural-Forms: nplurals=2; plural=n != 1;\n"
 "MIME-Version: 1.0\n"
+"Content-Type: text/plain; charset=ISO-8859-2\n"
 "Content-Transfer-Encoding: 8bit\n"
+"Plural-Forms: nplurals=2; plural=n != 1;\n"
 
 # type: TP
 #: dpkg-statoverride.8:1
@@ -21,8 +22,8 @@ msgstr "dpkg-statoverride"
 # type: TH
 #: dpkg-statoverride.8:1
 #, no-wrap
-msgid "2006-02-28"
-msgstr "2006-02-28"
+msgid "2006-05-04"
+msgstr "2006-05-04"
 
 # type: TH
 #: dpkg-statoverride.8:1
@@ -59,8 +60,8 @@ msgid ""
 "B<dpkg-statoverride> [I<options>] B<--add>I< E<lt>userE<gt> E<lt>groupE<gt> "
 "E<lt>modeE<gt> E<lt>fileE<gt>>"
 msgstr ""
-"B<dpkg-statoverride> [I<opcje>] B<--add>I< E<lt>u¿ytkownikE<gt> E<lt>grupaE<gt> "
-"E<lt>trybE<gt> E<lt>plikE<gt>>"
+"B<dpkg-statoverride> [I<opcje>] B<--add>I< E<lt>u¿ytkownikE<gt> "
+"E<lt>grupaE<gt> E<lt>trybE<gt> E<lt>plikE<gt>>"
 
 # type: Plain text
 #: dpkg-statoverride.8:13
@@ -70,7 +71,9 @@ msgstr "B<dpkg-statoverride> [I<opcje>] B<--remove>I< E<lt>plikE<gt>>"
 # type: Plain text
 #: dpkg-statoverride.8:18
 msgid "B<dpkg-statoverride> [I<options>] B<--list> [I<E<lt>glob-patternE<gt>>]"
-msgstr "B<dpkg-statoverride> [I<opcje>] B<--list> [I<E<lt>wzorzec-wyszukiwania-nazwyE<gt>>]"
+msgstr ""
+"B<dpkg-statoverride> [I<opcje>] B<--list> [I<E<lt>wzorzec-wyszukiwania-"
+"nazwyE<gt>>]"
 
 # type: SH
 #: dpkg-statoverride.8:19
@@ -314,4 +317,3 @@ msgstr ""
 "Niniejszy program jest oprogramowaniem wolnym, sprawd¼ Powszechn± Licencjê "
 "Publiczn± GNU w wersji drugiej lub pó¼niejszej, by dowiedzieæ siê o "
 "warunkach dystrybucji. Brak JAKIEJKOLWIEK gwarancji."
-
