--- a/debian/changelog
+++ b/debian/changelog
@@ -2,6 +2,7 @@ dpkg (1.13.20~) UNRELEASED; urgency=low
 
   [ Updated dpkg Translations ]
   * Polish (Robert Luberda).
+  * Hungarian (SZERVÁC Attila).
 
   [ Updated dselect Translations ]
   * Polish (Robert Luberda).
