--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2006-05-05  Clytie Siddall <clytie@riverland.net.au>
+
+	* vi.po: Updated Vietnamese translation.
+
 2006-05-04  SZERVÁC Attila <sas@321.hu>
 
 	* hu.po: Updated to 578t.
