Dselect Basque translation update

--- a/debian/changelog
+++ b/debian/changelog
@@ -6,11 +6,12 @@ dpkg (1.13.20~) UNRELEASED; urgency=low
 
   [ Updated dselect Translations ]
   * Polish (Robert Luberda).
+  * Basque (Piarres Beobide). Closes: #366187
 
   [ Updated man pages translations ]
   * Polish (Robert Luberda).
 
- -- Guillem Jover <guillem@debian.org>  Thu,  4 May 2006 14:33:33 +0300
+ -- Christian Perrier <bubulle@debian.org>  Sat,  6 May 2006 07:36:34 +0200
 
 dpkg (1.13.19) unstable; urgency=low
 
