--- a/dselect/po/ChangeLog
+++ b/dselect/po/ChangeLog
@@ -1,4 +1,8 @@
-2006-05-04  Robert Luberda <robert@debian.org>
+2006-05-06  Piarres Beobide  <pi@beobide.net>
+
+	* eu.po: Updated to 289t.
+
+2006-05-04  Robert Luberda  <robert@debian.org>
 
 	* pl.po: Updated to 289t.
 
