Updated Romanian translation

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,11 @@
+2006-05-06 Eddy Petrişor  <eddy.petrisor@gmail.com>
+
+	* ro.po: Unified quotation marks; using Romanian quotes
+	even more than before; removed (hopefuly) the rest of
+	first person messages (now dpkg message should be
+	impersonal).
+	Updated to 742t.
+
 2006-05-05  Clytie Siddall <clytie@riverland.net.au>
 
 	* vi.po: Updated Vietnamese translation.
