--- a/debian/changelog
+++ b/debian/changelog
@@ -3,6 +3,7 @@ dpkg (1.13.20~) UNRELEASED; urgency=low
   [ Updated dpkg Translations ]
   * Polish (Robert Luberda).
   * Hungarian (SZERVÁC Attila).
+  * Romanian (Eddy Petrişor).
 
   [ Updated dselect Translations ]
   * Polish (Robert Luberda).
