In fact there were also: * more consistency in translation of "failed"/"unable"/"couldn't" * minor spelling corrections

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -3,7 +3,8 @@
 	* ro.po: Unified quotation marks; using Romanian quotes
 	even more than before; removed (hopefuly) the rest of
 	first person messages (now dpkg message should be
-	impersonal).
+	impersonal). Improved consistency of translation of
+	"failed"/"unable"/"couldn't"; minor spelling corrections.
 	Updated to 742t.
 
 2006-05-05  Clytie Siddall <clytie@riverland.net.au>
