--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2006-05-07 Miguel Figueiredo <elmig@debianpt.org>
+
+	* pt.po: Updated ro 742t.
+
 2006-05-06 Eddy Petrişor  <eddy.petrisor@gmail.com>
 
 	* ro.po: Unified quotation marks; using Romanian quotes
