--- a/dselect/po/ChangeLog
+++ b/dselect/po/ChangeLog
@@ -1,3 +1,7 @@
+2006-05-07 Miguel Figueiredo <elmig@debianpt.org>
+
+	* pt.po: Updated to 289t.
+
 2006-05-06  Piarres Beobide  <pi@beobide.net>
 
 	* eu.po: Updated to 289t.
