Russian translation update

--- a/debian/changelog
+++ b/debian/changelog
@@ -5,6 +5,7 @@ dpkg (1.13.20~) UNRELEASED; urgency=low
   * Polish (Robert Luberda).
   * Hungarian (SZERVÁC Attila).
   * Romanian (Eddy Petrişor).
+  * Russian (Yuri Kozlov). Closes: #366353
 
   [ Updated dselect Translations ]
   * Polish (Robert Luberda).
