[l10n] Updated Czech translation

--- a/dselect/po/cs.po
+++ b/dselect/po/cs.po
@@ -11,7 +11,7 @@ msgstr ""
 "Project-Id-Version: dpkg\n"
 "Report-Msgid-Bugs-To: debian-dpkg@lists.debian.org\n"
 "POT-Creation-Date: 2006-05-03 11:56+0300\n"
-"PO-Revision-Date: 2006-03-05 18:23+0100\n"
+"PO-Revision-Date: 2006-05-08 13:54+0200\n"
 "Last-Translator: Miroslav Kure <kurem@debian.cz>\n"
 "Language-Team: Czech <debian-l10n-czech@lists.debian.org>\n"
 "MIME-Version: 1.0\n"
@@ -857,9 +857,11 @@ msgid ""
 "Usage: %s [<option> ...] [<action> ...]\n"
 "\n"
 msgstr ""
+"Použití: %s [<volba> ...] [<akce> ...]\n"
+"\n"
 
 #: dselect/main.cc:175
-#, fuzzy, c-format
+#, c-format
 msgid ""
 "Options:\n"
 "  --admindir <directory>     Use <directory> instead of %s.\n"
@@ -869,20 +871,12 @@ msgid ""
 "                             Configure screen colours.\n"
 "\n"
 msgstr ""
-"Použití: %s [<volba> ...] [<akce> ...]\n"
-"\n"
 "Volby:\n"
 "  --admindir <adresář>       Místo %s použije <adresář>.\n"
 "  --expert                   Zapne pokročilý režim.\n"
 "  --debug <soub> | -D<soub>  Zapne ladicí režim s výstupem do <soub>.\n"
 "  --colour | --color částobraz:[popředí],[pozadí][:atrib[+atrib+..]]\n"
 "                             Nastaví barvy.\n"
-"  --help                     Zobrazí tuto nápovědu.\n"
-"  --version                  Zobrazí verzi.\n"
-"  --license                  Zobrazí licenci.\n"
-"\n"
-"Akce:\n"
-"  access update select install config remove quit\n"
 "\n"
 
 #: dselect/main.cc:184
@@ -893,6 +887,10 @@ msgid ""
 "  --license | --licence      Show the license.\n"
 "\n"
 msgstr ""
+"  --help                     Zobrazí tuto nápovědu.\n"
+"  --version                  Zobrazí verzi.\n"
+"  --license                  Zobrazí licenci.\n"
+"\n"
 
 #: dselect/main.cc:190
 #, c-format
@@ -901,6 +899,9 @@ msgid ""
 "  access update select install config remove quit\n"
 "\n"
 msgstr ""
+"Akce:\n"
+"  access update select install config remove quit\n"
+"\n"
 
 #: dselect/main.cc:194
 #, c-format
