--- a/dselect/po/ChangeLog
+++ b/dselect/po/ChangeLog
@@ -1,3 +1,7 @@
+2006-05-08  Miroslav Kure  <kurem@debian.cz>
+
+	* cs.po: Updated to 289t.
+
 2006-05-07 Miguel Figueiredo <elmig@debianpt.org>
 
 	* pt.po: Updated to 289t.
