--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2006-05-08  Miroslav Kure  <kurem@debian.cz>
+
+	* cs.po: Updated to 742t.
+
 2006-05-08 Yuri Kozlov  <kozlov.y@gmail.com>
 
 	* ru.po: Updated ro 742t.
