fix typos in the Russian man pages. Thanks to Stepan Golosunov. Closes: #366587

--- a/man/ru/dpkg-checkbuilddeps.1.ru.po
+++ b/man/ru/dpkg-checkbuilddeps.1.ru.po
@@ -85,7 +85,7 @@ msgid ""
 "By default, I<debian/control> is read, but an alternate control filename may "
 "be specified on the command line."
 msgstr ""
-"По умолчанию читается |<debian/control>, но в командной строке можно задать "
+"По умолчанию читается I<debian/control>, но в командной строке можно задать "
 "другое имя файла control."
 
 # type: SH
@@ -106,7 +106,7 @@ msgid ""
 "Ignore I<Build-Depends-Indep> lines. Use when no arch-indep packages will be "
 "built."
 msgstr ""
-"Игнорировать строки |<Build-Depends-Indep>. Используется, если пакеты, "
+"Игнорировать строки I<Build-Depends-Indep>. Используется, если пакеты, "
 "независящие от архитектуры не собираются."
 
 # type: SH
