--- a/debian/changelog
+++ b/debian/changelog
@@ -16,6 +16,10 @@ dpkg (1.13.20~) UNRELEASED; urgency=low
   [ Updated man pages translations ]
   * Polish (Robert Luberda).
 
+  [ Nicolas François ]
+  * fix typos in the Russian man pages. Thanks to Stepan Golosunov.
+    Closes: #366587
+
  -- Christian Perrier <bubulle@debian.org>  Sat,  6 May 2006 07:36:34 +0200
 
 dpkg (1.13.19) unstable; urgency=low
