--- a/man/ChangeLog
+++ b/man/ChangeLog
@@ -1,3 +1,8 @@
+2006-05-10  Stepan Golosunov  <stepan@golosunov.pp.ru>
+
+	* ru/dpkg.1.ru.po: Typo fix ("|<" -> "I<").
+	* ru/dpkg-checkbuilddeps.1.ru.po: Likewise.
+
 2006-05-04  Robert Luberda  <robert@debian.org>
 
 	* pl/dpkg.1.pl.po: Updated to 218t (after locally update the POT file).
