Add remarks to dpkg-scansources and dpkg-scanpackages man pages about the need to compress the generated files to be able to access them via apt. Closes: #65839

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,5 +1,10 @@
 dpkg (1.13.20~) UNRELEASED; urgency=low
 
+  [ Frank Lichtenheld ]
+  * Add remarks to dpkg-scansources and dpkg-scanpackages
+    man pages about the need to compress the generated files
+    to be able to access them via apt. Closes: #65839
+
   [ Updated dpkg Translations ]
   * Portuguese (Miguel Figueiredo).
   * Polish (Robert Luberda).
