--- a/man/ChangeLog
+++ b/man/ChangeLog
@@ -1,3 +1,10 @@
+2006-05-10  Frank Lichtenheld  <djpig@debian.org>
+
+	* C/dpkg-scanpackages.1: Add remark that apt ignores
+	uncompressed Packages files on non-local access.
+	* C/dpkg-scansources.1: Likewise (with Sources instead of
+	Packages files of course).
+
 2006-05-10  Stepan Golosunov  <stepan@golosunov.pp.ru>
 
 	* ru/dpkg.1.ru.po: Typo fix ("|<" -> "I<").
