* Improve the description of --show-format in dpkg-deb   man page and add a pointer to the complete description   of the option in dpkg-query. * Honour tabbing requested via --show-format even if the field to   be printed is empty. Closes: #361671

--- a/ChangeLog
+++ b/ChangeLog
@@ -18,6 +18,11 @@
 	signature of a .dsc file, use the Debian
 	keyring if available.
 
+2006-05-10  Nicolas François  <nicolas.francois@centraliens.net>
+
+	* lib/showpkg.c (show1package): Honour the requested tabbing
+	of fields even if they are empty.
+
 2006-05-04  Guillem Jover  <guillem@debian.org>
 
 	* configure.ac: Bump version to 1.13.20~.
