--- a/man/ChangeLog
+++ b/man/ChangeLog
@@ -1,5 +1,10 @@
 2006-05-10  Frank Lichtenheld  <djpig@debian.org>
 
+	* C/dpkg-deb.1: Mention the --show-format option also
+	seperatly, not just in the description of --show.
+	Point the reader to the explanation of --show-format
+	in dpkg-query.1 to avoid having to duplicate it.
+
 	* C/dpkg-scanpackages.1: Add remark that apt ignores
 	uncompressed Packages files on non-local access.
 	* C/dpkg-scansources.1: Likewise (with Sources instead of
